# File: HISTORY.txt
#
14-Feb-2021 - V0.11 Created module with content migrated from rcsb.db
19-Feb-2021 - V0.12 Add IdCode exclusion filter to getLocatorObjList() add method getLocatorIdcodes()