@@ -2,3 +2,4 @@
 #
 14-Feb-2021 - V0.11 Created module with content migrated from rcsb.db
 19-Feb-2021 - V0.12 Add IdCode exclusion filter to getLocatorObjList() add method getLocatorIdcodes()
+15-Apr-2021 - V0.13 Add diagnostics for BIRD/Family/CC integration
